--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "css-loader": "^3.4.2",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
